crates/core/src/utils/testing/samples/tests/snapshots/caesura__utils__testing__samples__tests__album_generator_tests__sample_flac16_441.snap
---
source: crates/core/src/utils/testing/samples/tests/album_generator_tests.rs
expression: snapshot
---
- directory: ~
  filename: Test Artist - Test Album - 01 Track One.flac
  size: 850069
  sha256: 84dbf45120df7f2f3fb757a1175c13547e01e6a21286e055b953d8c36489cbbb
  audio:
    duration_ms: 65000
    overall_bitrate: 104
    audio_bitrate: 104
    sample_rate: 44100
    bit_depth: 16
    channels: 2
    channel_mask: ~
    tags:
      VorbisComments:
        AlbumTitle: Test Album
        Comment: Processed by SoX
        EncoderSoftware: reference libFLAC 1.5.0 20250211
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "1"
        TrackTitle: Track One
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: ~
  filename: Test Artist - Test Album - 02 Track Two.flac
  size: 1068229
  sha256: 714da5f10b1f20c3bb1c9ba56ef49578533fc34ed7ac92691600f97f28f92757
  audio:
    duration_ms: 65000
    overall_bitrate: 131
    audio_bitrate: 131
    sample_rate: 44100
    bit_depth: 16
    channels: 2
    channel_mask: ~
    tags:
      VorbisComments:
        AlbumTitle: Test Album
        Comment: Processed by SoX
        EncoderSoftware: reference libFLAC 1.5.0 20250211
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "2"
        TrackTitle: Track Two
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: ~
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
