crates/core/src/utils/testing/samples/tests/snapshots/caesura__utils__testing__samples__tests__album_generator_tests__sample_flac16_48.snap
---
source: crates/core/src/utils/testing/samples/tests/album_generator_tests.rs
expression: snapshot
---
- directory: ~
  filename: Test Artist - Test Album - 01 Track One.flac
  size: 1307115
  sha256: f3c084a6245c7a5b6d5464ca4bddc9692e83b480c05edd7bcdf7a94883327e84
  audio:
    duration_ms: 65000
    overall_bitrate: 160
    audio_bitrate: 160
    sample_rate: 48000
    bit_depth: 16
    channels: 2
    channel_mask: ~
    tags:
      VorbisComments:
        AlbumTitle: Test Album
        Comment: Processed by SoX
        EncoderSoftware: reference libFLAC 1.5.0 20250211
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "1"
        TrackTitle: Track One
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: ~
  filename: Test Artist - Test Album - 02 Track Two.flac
  size: 1608438
  sha256: a6c9086e674fea71a0d895758cb53fb5d3886a2dfc4d9c01b25ecf1f1941099a
  audio:
    duration_ms: 65000
    overall_bitrate: 197
    audio_bitrate: 197
    sample_rate: 48000
    bit_depth: 16
    channels: 2
    channel_mask: ~
    tags:
      VorbisComments:
        AlbumTitle: Test Album
        Comment: Processed by SoX
        EncoderSoftware: reference libFLAC 1.5.0 20250211
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "2"
        TrackTitle: Track Two
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: ~
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
