crates/core/src/utils/testing/samples/tests/snapshots/caesura__utils__testing__samples__tests__album_generator_tests__sample_flac24_441.snap
---
source: crates/core/src/utils/testing/samples/tests/album_generator_tests.rs
expression: snapshot
---
- directory: ~
  filename: Test Artist - Test Album - 01 Track One.flac
  size: 2660483
  sha256: 1824f7eff31011778f7d65ab29ce5192e34d4761c9942cab052a791a42797f9f
  audio:
    duration_ms: 65000
    overall_bitrate: 327
    audio_bitrate: 327
    sample_rate: 44100
    bit_depth: 24
    channels: 2
    channel_mask: ~
    tags:
      VorbisComments:
        AlbumTitle: Test Album
        Comment: Processed by SoX
        EncoderSoftware: reference libFLAC 1.5.0 20250211
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "1"
        TrackTitle: Track One
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: ~
  filename: Test Artist - Test Album - 02 Track Two.flac
  size: 3216040
  sha256: 63c562967c75c0e3ef2104d853fa8676a0d85e91c5a73e5309e5166cf6976599
  audio:
    duration_ms: 65000
    overall_bitrate: 395
    audio_bitrate: 395
    sample_rate: 44100
    bit_depth: 24
    channels: 2
    channel_mask: ~
    tags:
      VorbisComments:
        AlbumTitle: Test Album
        Comment: Processed by SoX
        EncoderSoftware: reference libFLAC 1.5.0 20250211
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "2"
        TrackTitle: Track Two
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: ~
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
