crates/core/src/utils/testing/samples/tests/snapshots/caesura__utils__testing__samples__tests__album_generator_tests__sample_flac24_96.snap
---
source: crates/core/src/utils/testing/samples/tests/album_generator_tests.rs
expression: snapshot
---
- directory: ~
  filename: Test Artist - Test Album - 01 Track One.flac
  size: 3263921
  sha256: 0ddb260bf1b2fbd80dde3ab3182765109398e8b0c20f6059c8bfa54ff17941b7
  audio:
    duration_ms: 65000
    overall_bitrate: 401
    audio_bitrate: 401
    sample_rate: 96000
    bit_depth: 24
    channels: 2
    channel_mask: ~
    tags:
      VorbisComments:
        AlbumTitle: Test Album
        Comment: Processed by SoX
        EncoderSoftware: reference libFLAC 1.5.0 20250211
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "1"
        TrackTitle: Track One
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: ~
  filename: Test Artist - Test Album - 02 Track Two.flac
  size: 5416100
  sha256: ec6d0acdb3f48440de1997c18c6282c7a17a9bba548545629ce8b0b98e189b86
  audio:
    duration_ms: 65000
    overall_bitrate: 666
    audio_bitrate: 666
    sample_rate: 96000
    bit_depth: 24
    channels: 2
    channel_mask: ~
    tags:
      VorbisComments:
        AlbumTitle: Test Album
        Comment: Processed by SoX
        EncoderSoftware: reference libFLAC 1.5.0 20250211
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "2"
        TrackTitle: Track Two
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: ~
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
